# internal/routers/api/v1/article.go
@@ -1,6 +1,11 @@
 package v1
 
 import (
+	"code.coolops.cn/blog_services/global"
+	"code.coolops.cn/blog_services/internal/service"
+	"code.coolops.cn/blog_services/pkg/app"
+	"code.coolops.cn/blog_services/pkg/convert"
+	"code.coolops.cn/blog_services/pkg/errcode"
 	"github.com/gin-gonic/gin"
 )
 
@@ -11,21 +16,47 @@ func NewArticle() Article {
 	return Article{}
 }
 
-
-
 // @Summary 获取多篇文章
 // @Produce json
 // @Tags 文章
 // @Param title query string false "文章名称" maxlength(100)
 // @Param desc query string false "文章描述"
 // @Param state query int false "状态" Enums(0, 1) default(1)
-// @Param page query int false "页码"
-// @Param page_size query int false "每页数量"
 // @Success 200 {object} model.Article "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles [get]
-func (a Article) List(ctx *gin.Context)   {}
+func (a Article) List(ctx *gin.Context) {
+	param := service.ArticleListRequest{}
+	response := app.NewResponse(ctx)
+	valid, errors := app.BindAndValid(ctx, &param)
+	if !valid {
+		global.Logger.ErrorF("app.BindAndValid err: %v", errors)
+		errRsp := errcode.InvalidParams.WithDetails(errors.Errors()...)
+		response.ToErrorResponse(errRsp)
+		return
+	}
+
+	// 业务逻辑
+	svc := service.NewService(ctx)
+	articles, err := svc.ArticleList(&param)
+	if err != nil {
+		global.Logger.ErrorF("svc.ArticleList err: %v", err)
+		response.ToErrorResponse(errcode.ErrorListArticleFail)
+		return
+	}
+	totalRows, err := svc.ArticleCount(&service.ArticleCountRequest{
+		Title: param.Title,
+		State: param.State,
+	})
+	if err != nil {
+		global.Logger.ErrorF("svc.ArticleCount err: %v", err)
+		response.ToErrorResponse(errcode.ErrorCountTagFail)
+		return
+	}
+	response.ToResponseList(articles, totalRows)
+	return
+}
 
 // @Summary 新增文章
 // @Produce json
@@ -40,7 +71,32 @@ func (a Article) List(ctx *gin.Context)   {}
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles [post]
-func (a Article) Create(ctx *gin.Context) {}
+func (a Article) Create(ctx *gin.Context) {
+	param := service.ArticleCreateRequest{}
+	response := app.NewResponse(ctx)
+	valid, errors := app.BindAndValid(ctx, &param)
+	if !valid {
+		global.Logger.ErrorF("app.BindAndValid err: %v", errors)
+		errRsp := errcode.InvalidParams.WithDetails(errors.Errors()...)
+		response.ToErrorResponse(errRsp)
+		return
+	}
+
+	// 处理业务逻辑
+	svc := service.NewService(ctx)
+	err := svc.ArticleCreate(&param)
+	if err != nil {
+		global.Logger.ErrorF("svc.ArticleCreate err: %v", err)
+		if err == errcode.ErrorArticleIsExistFail {
+			response.ToErrorResponse(errcode.ErrorArticleIsExistFail)
+		} else {
+			response.ToErrorResponse(errcode.ErrorCreateArticleFail)
+		}
+		return
+	}
+	response.ToResponse(gin.H{})
+	return
+}
 
 // @Summary 更新文章
 // @Produce json
@@ -56,7 +112,28 @@ func (a Article) Create(ctx *gin.Context) {}
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles/{id} [put]
-func (a Article) Update(ctx *gin.Context) {}
+func (a Article) Update(ctx *gin.Context) {
+	param := service.ArticleUpdateRequest{ID: convert.StrTo(ctx.Param("id")).MustUInt32()}
+	response := app.NewResponse(ctx)
+	valid, errors := app.BindAndValid(ctx, &param)
+	if !valid {
+		global.Logger.ErrorF("app.BindAndValid err: %v", errors)
+		errRsp := errcode.InvalidParams.WithDetails(errors.Errors()...)
+		response.ToErrorResponse(errRsp)
+		return
+	}
+
+	// 处理逻辑
+	svc := service.NewService(ctx)
+	err := svc.ArticleUpdate(&param)
+	if err != nil {
+		global.Logger.ErrorF("svc.ArticleUpdate err: %v", err)
+		response.ToErrorResponse(errcode.ErrorUpdateArticleFail)
+		return
+	}
+	response.ToResponse(gin.H{})
+	return
+}
 
 // @Summary 删除文章
 // @Produce json
@@ -66,4 +143,25 @@ func (a Article) Update(ctx *gin.Context) {}
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles/{id} [delete]
-func (a Article) Delete(ctx *gin.Context) {}
+func (a Article) Delete(ctx *gin.Context) {
+	param := service.ArticleDeleteRequest{ID: convert.StrTo(ctx.Param("id")).MustUInt32()}
+	response := app.NewResponse(ctx)
+	valid, errors := app.BindAndValid(ctx, &param)
+	if !valid {
+		global.Logger.ErrorF("app.BindAndValid err: %v", errors)
+		errRsp := errcode.InvalidParams.WithDetails(errors.Errors()...)
+		response.ToErrorResponse(errRsp)
+		return
+	}
+
+	// 处理业务
+	svc := service.NewService(ctx)
+	err := svc.ArticleDelete(&param)
+	if err != nil {
+		global.Logger.ErrorF("svc.ArticleDelete err: %v", err)
+		response.ToErrorResponse(errcode.ErrorDeleteArticleFail)
+		return
+	}
+	response.ToResponse(gin.H{})
+	return
+}
